Add title and explanatory text to homepage

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <h1>ArcGIS DevLabs</h1>
+    <p>This page is simply a place for me to organize my work through Esri's ArcGIS DevLabs.</p>
     <ul>
         <li>Create a Starter App
             <ul>
+                <li>JavaScript</li>
                 <li><a href="https://developers.arcgis.com/labs/javascript/create-a-starter-app/" target="_blank">DevLab</a></li>
                 <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/create-a-starter-app.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/create-a-starter-app.html"></a></li>
+                <li><a href="http://maptastik.us/ArcGIS_DevLabs/create-a-starter-app.html">Live Demo</a></li>
             </ul>
         </li>
     </ul>    
