--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 <li><a href="http://maptastik.us/ArcGIS_DevLabs/find-place.html">Live Demo</a></li>
             </ul>
         </li>
+        <li>Display a web scene
+                <ul>
+                    <li>JavaScript</li>
+                    <li><a href="https://developers.arcgis.com/labs/javascript/display-a-web-scene/" target="_blank">DevLab</a></li>
+                    <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-a-webscene.html">My Code</a></li>
+                    <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webscene.html">Live Demo</a></li>
+                </ul>
+            </li>
     </ol>    
 </body>
 </html>
