--- a/index.html
+++ b/index.html
@@ -34,11 +34,20 @@
                 <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webscene.html">Live Demo</a></li>
             </ul>
         </li>
+        <li>Add a layer from an item
             <ul>
                 <li>JavaScript</li>
                 <li><a href="https://developers.arcgis.com/labs/javascript/add-a-layer-from-an-item/" target="_blank">DevLab</a></li>
                 <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layer-from-item.html">My Code</a></li>
                 <li><a href="http://maptastik.us/ArcGIS_DevLabs/add-layer-from-item.html">Live Demo</a></li>
+            </ul>
+        </li>
+        <li>Display a styled vector basemap
+            <ul>
+                <li>JavaScript</li>
+                <li><a href="https://developers.arcgis.com/labs/javascript/display-a-styled-vector-basemap/" target="_blank">DevLab</a></li>
+                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-styled-vector-basemap.html">My Code</a></li>
+                <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-styled-vector-basemap.html">Live Demo</a></li>
             </ul>
         </li>
     </ol>    
