add display a webmap  info

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-styled-vector-basemap.html">Live Demo</a></li>
             </ul>
         </li>
+        <li>Display a webmap
+            <ul>
+                <li>JavaScript</li>
+                <li><a href="https://developers.arcgis.com/labs/javascript/display-a-web-map/" target="_blank">DevLab</a></li>
+                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-a-webmap.html">My Code</a></li>
+                <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webmap.html">Live Demo</a></li>
+            </ul>
+        </li>
     </ol>    
 </body>
 </html>
