add add layers to map  info

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webmap.html">Live Demo</a></li>
             </ul>
         </li>
+        <li>Add layers to a map
+            <ul>
+                <li>JavaScript</li>
+                <li><a href="https://developers.arcgis.com/labs/javascript/add-layers-to-a-map/" target="_blank">DevLab</a></li>
+                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layers-to-map.html">My Code</a></li>
+                <li><a href="http://maptastik.us/ArcGIS_DevLabs/add-layers-to-map.html">Live Demo</a></li>
+            </ul>
+        </li>
     </ol>    
 </body>
 </html>
