add add layers to scene info

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Maptastik's Journey through ArcGIS DevLabs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
     <h1>ArcGIS DevLabs</h1>
     <p>This page is simply a place for me to organize my work through Esri's ArcGIS DevLabs.</p>
@@ -13,59 +15,116 @@
         <li>Create a Starter App
             <ul>
                 <li>JavaScript</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/create-a-starter-app/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/create-a-starter-app.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/create-a-starter-app.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/create-a-starter-app/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/create-a-starter-app.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/create-a-starter-app.html">Live Demo</a>
+                </li>
             </ul>
         </li>
         <li>Find places
             <ul>
                 <li>JavaScript, REST</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/find-places/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/find-place.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/find-place.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/find-places/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/find-place.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/find-place.html">Live Demo</a>
+                </li>
             </ul>
         </li>
         <li>Display a web scene
             <ul>
                 <li>JavaScript</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/display-a-web-scene/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-a-webscene.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webscene.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/display-a-web-scene/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-a-webscene.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webscene.html">Live Demo</a>
+                </li>
             </ul>
         </li>
         <li>Add a layer from an item
             <ul>
                 <li>JavaScript</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/add-a-layer-from-an-item/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layer-from-item.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/add-layer-from-item.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/add-a-layer-from-an-item/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layer-from-item.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/add-layer-from-item.html">Live Demo</a>
+                </li>
             </ul>
         </li>
         <li>Display a styled vector basemap
             <ul>
                 <li>JavaScript</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/display-a-styled-vector-basemap/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-styled-vector-basemap.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-styled-vector-basemap.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/display-a-styled-vector-basemap/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-styled-vector-basemap.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/display-styled-vector-basemap.html">Live Demo</a>
+                </li>
             </ul>
         </li>
         <li>Display a webmap
             <ul>
                 <li>JavaScript</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/display-a-web-map/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-a-webmap.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webmap.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/display-a-web-map/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-a-webmap.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/display-a-webmap.html">Live Demo</a>
+                </li>
             </ul>
         </li>
         <li>Add layers to a map
             <ul>
                 <li>JavaScript</li>
-                <li><a href="https://developers.arcgis.com/labs/javascript/add-layers-to-a-map/" target="_blank">DevLab</a></li>
-                <li><a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layers-to-map.html">My Code</a></li>
-                <li><a href="http://maptastik.us/ArcGIS_DevLabs/add-layers-to-map.html">Live Demo</a></li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/add-layers-to-a-map/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layers-to-map.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/add-layers-to-map.html">Live Demo</a>
+                </li>
             </ul>
         </li>
-    </ol>    
+        <li>Add layers to a 3D Scene
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/add-layers-to-a-3d-scene/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/add-layers-to-scene.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/add-layers-to-scene.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
+    </ol>
 </body>
+
 </html>
