add style feature layers info

--- a/index.html
+++ b/index.html
@@ -124,6 +124,20 @@
                 </li>
             </ul>
         </li>
+        <li>Style feature layers
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/style-feature-layers/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/style-feature-layers.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/style-feature-layers.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
     </ol>
 </body>
 
