add configure pop-ups info

--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
                 </li>
             </ul>
         </li>
+        <li>Style feature layers
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/configure-pop-ups/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/configure-pop-ups.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/configure-pop-ups.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
     </ol>
 </body>
 
