--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>ArcGIS DevLabs</h1>
     <p>This page is simply a place for me to organize my work through Esri's ArcGIS DevLabs.</p>
+    <h2>JavaScript</h2>
     <ol>
         <li>Create a Starter App
             <ul>
@@ -28,7 +29,7 @@
         </li>
         <li>Find places
             <ul>
-                <li>JavaScript, REST</li>
+                <li>JavaScript</li>
                 <li>
                     <a href="https://developers.arcgis.com/labs/javascript/find-places/" target="_blank">DevLab</a>
                 </li>
@@ -138,7 +139,7 @@
                 </li>
             </ul>
         </li>
-        <li>Style feature layers
+        <li>Configure pop-ups
             <ul>
                 <li>JavaScript</li>
                 <li>
@@ -149,6 +150,20 @@
                 </li>
                 <li>
                     <a href="http://maptastik.us/ArcGIS_DevLabs/configure-pop-ups.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
+        <li>Query a feature
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/query-a-feature-layer/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/query-a-feature.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/query-a-feature.html">Live Demo</a>
                 </li>
             </ul>
         </li>
