add search for an address  info

--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
                 </li>
             </ul>
         </li>
+        <li>Search for an address
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/search-for-an-address/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/search-for-an-address.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/search-for-an-address.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
     </ol>
 </body>
 
