add get a route and directions info

--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
                 </li>
             </ul>
         </li>
+        <li>Get a route and directions
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/get-a-route-and-directions/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/get-directions.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/get-directions.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
     </ol>
 </body>
 
