add display graphics info

--- a/index.html
+++ b/index.html
@@ -195,6 +195,20 @@
                 </li>
             </ul>
         </li>
+        <li>Display point, line and polygon graphics
+            <ul>
+                <li>JavaScript</li>
+                <li>
+                    <a href="https://developers.arcgis.com/labs/javascript/display-point-line-and-polygon-graphics/" target="_blank">DevLab</a>
+                </li>
+                <li>
+                    <a href="https://github.com/maptastik/ArcGIS_DevLabs/blob/master/display-graphics.html">My Code</a>
+                </li>
+                <li>
+                    <a href="http://maptastik.us/ArcGIS_DevLabs/display-graphics.html">Live Demo</a>
+                </li>
+            </ul>
+        </li>
     </ol>
 </body>
 
